--- a/src/main/resources/static/Admin/sidebar.html
+++ b/src/main/resources/static/Admin/sidebar.html
@@ -11,7 +11,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
         <div class="logo">
-            <img class="logo-icon" src="../homepageResources/pet-house.png" alt="icon">
+            <img class="logo-icon" src="../homepageResources/pet-house.png" alt="icon" width="50" height="50">
             <div class="logo-text">
                 <h2>Pet</h2>
                 <h2>Adoption</h2>
