--- a/src/main/resources/static/Admin/allpet.html
+++ b/src/main/resources/static/Admin/allpet.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="allpet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Pet Adoption Allpet</title>
 </head>
 
@@ -53,11 +54,10 @@
                                 <th>Type</th>
                                 <th>Breed</th>
                                 <th>Status</th>
-                                <th class="actions-header">Actions</th>
+                                <th class="actions-header"></th>
                             </tr>
                         </thead>
-                        <tbody id="petTableBody">
-                            </tbody>
+                        <tbody id="petTableBody"></tbody>
                     </table>
                 </div>
             </main>
