--- a/src/main/resources/static/Admin/allpet.html
+++ b/src/main/resources/static/Admin/allpet.html
@@ -53,14 +53,16 @@
                                 <th>Pet</th>
                                 <th>Type</th>
                                 <th>Breed</th>
-                                <th>Status</th>
-                                <th class="actions-header"></th>
+                                <th>Status</th>                           
+                                <th colspan="2" class="actions-header"></th>
                             </tr>
                         </thead>
-                        <tbody id="petTableBody"></tbody>
+                        <tbody id="petTableBody">
+                            </tbody>
                     </table>
                 </div>
             </main>
+
             <div id="filterModal" class="modal-backdrop modal-hidden">
                 <div class="modal-content">
                     <div class="modal-header">
