--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -21,10 +21,7 @@
             <div class="main-content">
 
                 <!-- header -->
-                <div class="breadcrumb">
-                    <div class="breadcrumb-text">ALL PET <span class="material-symbols--chevron-right-rounded"></span> รายการคำขอรับเลี้ยง</div>
-                    <div class="line"></div>
-                </div>
+                <div id="breadcrumb-placeholder" class="header"></div>
                     
                 <!-- all white cards -->
                 <div class="content-wrapper">
@@ -196,6 +193,7 @@
 
     <script src="sidebar.js"></script>
     <script src="requests.js"></script>
+    <script src="breadcrumb.js" defer></script>
 </body>
 
 </html>
