--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -114,6 +114,14 @@
             <label for="reason">ทำไมคุณถึงอยากรับเลี้ยงสัตว์เลี้ยง? <span class="required">*</span></label>
             <textarea id="reason" name="reason" required placeholder="บอกเราเกี่ยวกับความพร้อมของคุณและสิ่งที่คุณสามารถมอบให้สัตว์เลี้ยงได้"></textarea>
             <div id="reasonError" class="error"></div>
+
+            <label>คุณต้องการให้เราจัดส่งสัตว์เลี้ยงให้หรือต้องการมารับด้วยตัวเอง?<span class="required">*</span></label>
+            <div class="select">
+                <label><input type="radio" name="receiveType" value="delivery" required>ให้มูลนิธิมาส่งให้ตามที่อยู่</label>
+                <label><input type="radio" name="receiveType" value="pickup">ไปรับด้วยตัวเองที่มูลนิธิ</label>
+            </div>
+
+
         </div>
 
         <!--- part 4 --->
