adjust label style

--- a/src/main/resources/static/User/userform.html
+++ b/src/main/resources/static/User/userform.html
@@ -116,7 +116,7 @@
             <div id="reasonError" class="error"></div>
 
             <label>คุณต้องการให้เราจัดส่งสัตว์เลี้ยงให้หรือต้องการมารับด้วยตัวเอง?<span class="required">*</span></label>
-            <div class="select">
+            <div class="select receiveType" >
                 <label><input type="radio" name="receiveType" value="delivery" required>ให้มูลนิธิมาส่งให้ตามที่อยู่</label>
                 <label><input type="radio" name="receiveType" value="pickup">ไปรับด้วยตัวเองที่มูลนิธิ</label>
             </div>
