backend-edit-add

--- a/src/main/resources/static/Admin/addpet.html
+++ b/src/main/resources/static/Admin/addpet.html
@@ -142,7 +142,7 @@
             </main>
         </div>
 
-    <script src="add-edit-pet.js"></script>
+    <script src="addpet.js"></script>
     <script src="sidebar.js"></script>
 </body>
 </html>
